--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<!--
-    Beschreibung siehe README.md
--->
+
+<!-- Beschreibung siehe README.md -->
+
 <html lang="de">
   <head>
     <title>Github Portfolioseite Petra Kaser</title>
     <meta charset="UTF-8" />
+    <!-- BOOTSTRAP -->
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
@@ -14,4 +15,25 @@
       crossorigin="anonymous"
     />
   </head>
+
+  <body>
+    <!-- Navbar -->
+    <!-- About content -->
+    <!-- Projects content -->
+    <!-- Education content -->
+    <!-- Social Media Links -->
+
+    
+<!-- JAVASCRIPT -->
+  <!-- bootstrap -->
+    <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+    crossorigin="anonymous"
+  ></script>
+
+  </body>
+
   </html>
+
+ 
