--- a/index.html
+++ b/index.html
@@ -17,13 +17,18 @@
   </head>
 
   <body>
+    <div>Petra</div>
     <!-- Navbar -->
     <!-- About content -->
+    <div>Ich bin SAP-Modulspezialistin im Bereich Instandhaltung und Studentin an der BFH.</div>
     <!-- Projects content -->
+    <div>Meine wichtigsten Projekte waren die Einführung der QR-Rechnung bei meinem vorherigen Arbeitgeber sowie die Umstellung auf SAP S/4HANA.</div>
     <!-- Education content -->
+    <div>Zu meinen Abschlüssen gehören: EFZ, Berufsmatur. Momentan bin ich im Studium für Wirtschaftsinformatik an der Berner Fachhochschule.</div>
     <!-- Social Media Links -->
+    <div>Links zu git, Linkedin, xing.</div>
 
-    
+
 <!-- JAVASCRIPT -->
   <!-- bootstrap -->
     <script
