--- a/index.html
+++ b/index.html
@@ -17,16 +17,51 @@
   </head>
 
   <body>
-    <div>Petra</div>
+    <header>
+      <!-- About content -->
+      <div class="foto">
+        <h1>Petra Kaser</h1>
+      </div>
+    </header>
+
     <!-- Navbar -->
-    <!-- About content -->
-    <div>Ich bin SAP-Modulspezialistin im Bereich Instandhaltung und Studentin an der BFH.</div>
+
+    <!-- Contact -->
+    <div>
+      <h2>Contact information</h2>
+      <p>Petra Kaser</p>
+      <p>Mail: kontakt@petrakaser.ch</p>
+      <p>Telephone: xxx</p>
+    </div>
+    <!-- Social media links -->
+    <div>
+      <a href=> linkedin</a>
+      <a href=> Xing</a>
+      <a href=> Website</a>
+      <a href=> Telefon</a>
+    </div>
+
     <!-- Projects content -->
-    <div>Meine wichtigsten Projekte waren die Einführung der QR-Rechnung bei meinem vorherigen Arbeitgeber sowie die Umstellung auf SAP S/4HANA.</div>
+    <div>
+      <h2>Work experience</h2>
+      <ul>
+        <li>
+          I work as a SAP module specialist
+        </li>
+      </ul>
+    </div>
+    
     <!-- Education content -->
-    <div>Zu meinen Abschlüssen gehören: EFZ, Berufsmatur. Momentan bin ich im Studium für Wirtschaftsinformatik an der Berner Fachhochschule.</div>
-    <!-- Social Media Links -->
-    <div>Links zu git, Linkedin, xing.</div>
+    <div>
+      <h2>Education</h2>
+      <ul>
+        <li>
+          Studentin Bachelor of Science Business Information at BFH
+        </li>
+        <li>Berufsmatur while working</li>
+        <li>Kauffrau EFZ E-Profil at BKW</li>
+      </ul>
+    </div>
 
 
 <!-- JAVASCRIPT -->
