--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<h1>Petra</h1>
 						<h2>I like
 							<span class="txt-rotate" data-period="2000"
-								data-rotate='[ "Travelling.", "Digitalisation", "Reading.", "SAP."]'></span>
+								data-rotate='[ "Digitalisation.", "Agility.", "SAP.", "Travelling."]'></span>
 						</h2>
 					</div>
 				</div>
@@ -90,7 +90,7 @@
 				<div class="col-md-6 col-lg-6 pl-md-5 py-5">
 					<div class="row justify-content-start pb-3">
 						<div class="col-md-12 heading-section ftco-animate">
-							<h2 class="mb-4">About Me</h2>
+							<h2 class="mb-4">This is me</h2>
 							<p>Here's some facts about me</p>
 							<ul class="about-info mt-4 px-md-0 px-2">
 								<li class="d-flex"><span>Name:</span><span>Petra</span></li>
@@ -99,11 +99,6 @@
 								<li class="d-flex"><span>Country:</span> <span>Switzerland</span></li>
 								<li class="d-flex"><span>City:</span><span>Bern</span></li>
 							</ul>
-						</div>
-					</div>
-					<div class="counter-wrap ftco-animate d-flex mt-md-3">
-						<div class="text">
-							<p><a href="" class="btn btn-primary py-3 px-3">Download CV</a></p>
 						</div>
 					</div>
 				</div>
