--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <div class="p-5 mb-4 bg-light rounded-3">
             <div class="container-fluid py-5">
               <h1 class="display-5 fw-bold">Petra Kaser</h1>
-              <p class="col-md-8 fs-4">Kompetenz und Zielstrebig</p>
+              <p class="col-md-8 fs-4">Kompetent und zielstrebig</p>
               <button class="btn btn-primary btn-lg" type="button" onclick="scroll_here_to()">
                 Lerne mich besser kennen
               </button>
@@ -52,6 +52,9 @@
               <li class="list-group-item">petra@gmail.com</li>
               <li class="list-group-item">Bern, Switzerland</li>
               <li class="list-group-item">+41 79 473 45 54</li>
+              <li class="list-group-item">Linkedin</li>
+              <li class="list-group-item">Xing</li>
+              <li class="list-group-item">Github</li>
             </ul>
           </div>
         </div>
@@ -87,7 +90,7 @@
               <p class="card-text">
                 Typ Wirtschaft <br />
                 Bern - Switzerland <br />
-                <span class="fw-bold">2013 - 2016</span>
+                <span class="fw-bold">2016 - 2018</span>
               </p>
             </div>
           </div>
@@ -177,7 +180,7 @@
               <img class="card-img-top" src="res/reisen.jpeg" alt="reisen" />
               <div class="card-body">
                 <p class="card-text">
-                  Reise und neue Eindrücke der Welt erhalten.
+                  Reisen: Neue Eindrücke der Welt erhalten und Erfahrungen sammeln.
                 </p>
               </div>
             </div>
@@ -191,7 +194,7 @@
               />
               <div class="card-body">
                 <p class="card-text">
-                  Kultur auf eine wunderschöne Art geniessen.
+                  Konzerte: Kultur auf eine wunderschöne Art geniessen.
                 </p>
               </div>
             </div>
@@ -205,7 +208,7 @@
               />
               <div class="card-body">
                 <p class="card-text">
-                  Sportliche betätigung mit bester Aussicht.
+                  Skifahren: Sportliche Betätigung mit bester Aussicht.
                 </p>
               </div>
             </div>
