--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">WKS KV Bildung</h5>
-              <h6 class="card-subtitle mb-2 text-muted">EFZ Kauffrau</h6>
+              <h6 class="card-subtitle mb-2 text-muted">Kauffrau EFZ</h6>
               <p class="card-text">
                 Profil E - Dienstleistung und Administration <br />
                 Bern - Switzerland <br />
