--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Portfolio Petra Kaser</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -52,10 +53,18 @@
               <li class="list-group-item">petra@gmail.com</li>
               <li class="list-group-item">Bern, Switzerland</li>
               <li class="list-group-item">+41 79 473 45 54</li>
-              <li class="list-group-item">Linkedin</li>
-              <li class="list-group-item">Xing</li>
-              <li class="list-group-item">Github</li>
             </ul>
+
+            <a href="https://www.linkedin.com/in/petra-kaser-0a4480198/" class="text-decoration-none" target="_blank">
+              <i class="fa fa-linkedin-square h1 p-2" aria-hidden="true"></i>
+            </a>
+            <a href="https://www.xing.com/profile/Petra_Kaser3/cv" class="text-decoration-none" target="_blank">
+              <i class="fa fa-xing h1 p-2" aria-hidden="true"></i>
+            </a>
+            <a href="https://github.com/98petra" class="text-decoration-none" target="_blank">
+              <i class="fa fa-github h1 p-2" aria-hidden="true"></i>
+            </a>
+
           </div>
         </div>
       </div>
